# makecloud

./: .gitignore  .gitmodules  LICENSE  README.md  dune  dune-project  makecloud.opam  makecloud.opam.locked  makecloud.yaml  mc_settings.yml
.github/workflows/: main.yml
agent/: agent.ml  dune
cli/: dune  main.ml
engine/: command.ml  dune  lib.ml  node.ml  notify.ml  provider_aws.ml  provider_stub.ml  provider_template.ml  runner.ml  settings.ml
engine/userdata_scripts/: linux.txt  windows.txt
web/: dune  github.ml  run.ml  web.ml
web/templates/: base.html  index.html  show_runs.html
