opam-version: "1.2"
maintainer: "Adam K. Ringwood <adam@endgame.com>"
authors: [ "Adam K. Ringwood <adam@endgame.com>"
           "Hezekiah M. Carty <hcarty@endgame.com>" ]
license: "MIT"
homepage: "https://github.com/endgameinc/makecloud"
dev-repo: "https://github.com/endgameinc/makecloud.git"
bug-reports: "https://github.com/endgameinc/makecloud"
build: ["dune" "build" "@makecloud"]
build-test: ["dune" "build" "@runtest"]
build-doc: [ "dune" "build" "@doc" ]
depends: [
  "dune"
  "cmdliner" {>= "1.0.0"}
  "lwt" {>= "2.7.0"}
  "lwt_ppx"
  "ocaml-monadic" {>= "0.4.0"}
  "base64"
  "cohttp-lwt-unix"
  "aws-s3-lwt"
  "calendar"
  "ppx_blob"
  "ppx_defer"
  "ppx_deriving"
  "ppx_protocol_conv" {>= "5.0.0"}
  "ppx_protocol_conv_json"
  "ppx_protocol_conv_yaml"
  "rresult"
  "uuidm"
  "yaml"
  "yojson"
  "menhir"
  "tls"
  "uucp"
  "ezxmlm"
  "irmin"
  "irmin-unix"
  "ppx_irmin"
]
synopsis: "A simple build system for complex builds"
available: [ ocaml-version >= "4.05.0" ]
