(executable
 (name web)
 (libraries engine lwt.unix cmdliner yaml.unix aws-s3-lwt rresult uuidm digestif astring jingoo bos cohttp-lwt-unix)
 (preprocessor_deps "templates/index.html" "templates/show_runs.html" "templates/base.html" "assets/timeago.min.js")
 (preprocess (pps lwt_ppx ppx_defer ocaml-monadic ppx_protocol_conv_json ppx_protocol_conv ppx_blob)))
