(executable
 (name web)
 (libraries engine lwt.unix cmdliner yaml.unix aws-s3-lwt rresult uuidm digestif astring jingoo bos cohttp-lwt-unix irmin-unix)
 (preprocessor_deps "templates/index.html" "templates/show_runs.html" "templates/base.html" "assets/timeago.min.js" "assets/full.render.js" "assets/viz.js")
 (preprocess (pps lwt_ppx ppx_defer ppx_protocol_conv ppx_blob ppx_irmin)))

(alias
  (name makecloud-web)
  (deps web.exe))
